--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "rekoa",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
-  "engines" : { "node" : ">=0.12.0" },
+  "engines": {
+    "node": ">=0.12.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
