--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "composition": "^2.2.1",
     "glob": "^5.0.15",
     "koa": "^1.1.1",
-    "koa-router": "^5.2.3"
+    "koa-router": "^5.2.3",
+    "lodash": "^3.10.1"
   },
   "directories": {
     "example": "example"
