--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "composition": "^2.2.1",
+    "injecting": "^2.2.0",
     "koa": "^1.1.1",
     "routington": "^1.0.3"
   },
