--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "example": "example"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.5",
+    "@babel/preset-typescript": "^7.7.7",
+    "@babel/register": "^7.7.7",
     "fs-promise": "^0.3.1",
     "handlebars": "^4.5.3"
   },
