--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node": ">=10.10.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "fix": "standard --fix",
+    "lint": "standard",
+    "test": "mocha example/**/*.spec.js --exit"
   },
   "author": "",
   "license": "ISC",
@@ -26,8 +28,11 @@
     "@babel/plugin-transform-modules-commonjs": "^7.7.5",
     "@babel/preset-typescript": "^7.7.7",
     "@babel/register": "^7.7.7",
+    "axios": "^0.19.0",
     "fs-promise": "^0.3.1",
-    "handlebars": "^4.5.3"
+    "handlebars": "^4.5.3",
+    "mocha": "^6.2.2",
+    "standard": "*"
   },
   "repository": {
     "type": "git",
