--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "injecting": "^2.8.1",
     "koa": "^2.11.0",
     "koa-compose": "^4.1.0",
+    "performance-now": "^2.1.0",
     "routington": "^1.0.3",
     "xkit": "^1.1.1"
   },
