--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^3.5.2",
     "injecting": "^2.9.0",
     "koa": "^2.11.0",
     "koa-compose": "^4.1.0",
